# cu-fastapi-lightsail

./: .gitignore  README.md
.github/: pull_request_template.md
.github/pr_template/: baes.md
.github/workflows/: ci.yml  cron.yml  ecr.yml  lightsail.yml
.github/workflows-disabled/: cron.yml  lightsail.yml
argo/: cu-deployment.yaml
backend/: .env.local  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  index.py  main.py  middleware.py  models.py  schemas.py  slack.py  ws.py
backend/app/api/: index.py  sensor.py  sensor_record.py  slack.py
backend/app/tests/: conftest.py  test_base.py
backend/scripts/: .gitignore  container.json  create-spec.py  delete-images.sh
